# advent-of-code

./: .envrc  .gitignore  Cargo.toml  Justfile  README.md  Readme.md  build.rs  inputs.gz.age  pyproject.toml  x.py
.cargo/: config.toml
.config/: cargo.toml  nextest.toml
.github/workflows/: ci.yml  test.yml
aoc/: Cargo.toml
aoc-2015/: Cargo.toml
aoc-2015/src/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  lib.rs
aoc-2015/tests/: 2015.rs  integration.rs
aoc-2016/: Cargo.toml
aoc-2016/fixtures/letters/: B  D  Z
aoc-2016/src/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  22.rs  lib.rs
aoc-2016/tests/: 2016.rs  integration.rs
aoc-2017/: Cargo.toml
aoc-2018/: Cargo.toml
aoc-2019/: Cargo.toml
aoc-2020/: Cargo.toml
aoc-2021/: Cargo.toml
aoc-2022/: Cargo.toml
aoc-2022/src/: lib.rs
aoc-2023/: Cargo.toml
aoc-2024/: Cargo.toml
aoc-2024/src/: 01.rs  02.rs  03.rs  04.rs  lib.rs
aoc-2024/tests/: 2024.rs  integration.rs  tests.rs
aoc-2025/: Cargo.toml
aoc-2025/src/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  lib.rs
aoc-2025/tests/: 2025.rs  integration.rs
aoc-common/: Cargo.toml
aoc-common/src/: bool_ext.rs  from_str_ext.rs  grid.rs  lib.rs
aoc-dl/: Cargo.toml
aoc-meta/: Cargo.toml
aoc-meta/src/: lib.rs  problem.rs  problem_set.rs  solution.rs
aoc-meta/src/indices/: day.rs  part.rs  year.rs
aoc-test/: Cargo.toml
aoc-test/src/: lib.rs
aoc/benches/: aoc.rs  macros.rs
aoc/src/: lib.rs  main.rs
benches/: bench.rs
fixtures/: inputs.gz.age
fixtures/2016/08/: C  L  O  S  U
scripts/: download-inputs.sh
src/: lib.rs  main.rs  util.rs  wasm.rs
src/2015/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  1.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  2.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs  mod.rs
src/2016/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  mod.rs
src/2020/: mod.rs
src/2024/: 01.rs  02.rs  03.rs  04.rs  mod.rs
src/common/: ascii_ext.rs  bool_ext.rs  from_str_ext.rs  grid.rs  mod.rs
src/meta/: macros.rs  mod.rs  problem.rs  problem_set.rs  solution.rs
src/meta/indices/: day.rs  mod.rs  part.rs  year.rs
src/types/: day.rs  grid.rs  mod.rs  part.rs  year.rs
tests/: 2015.rs  fixtures.gz.age  integration.rs
tests/util/: mod.rs
x/: __init__.py  bench.py  completion.py  paths.py  profile.py  run.py  test.py  types.py
x/inputs/: __init__.py  browser.py  decrypt.py  download.py  encrypt.py  lockfile.py
