[workspace]
members = [
    "aoc",
    "aoc-2015",
    "aoc-2016",
    "aoc-2017",
    "aoc-2018",
    "aoc-2019",
    "aoc-2020",
    "aoc-2021",
    "aoc-2022",
    "aoc-2023",
    "aoc-2024",
    "aoc-common",
    "aoc-meta",
    "aoc-test",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "PPL"
version = "0.1.0"

[workspace.dependencies]
aoc-2015 = { path = "aoc-2015" }
aoc-2016 = { path = "aoc-2016" }
aoc-2017 = { path = "aoc-2017" }
aoc-2018 = { path = "aoc-2018" }
aoc-2019 = { path = "aoc-2019" }
aoc-2020 = { path = "aoc-2020" }
aoc-2021 = { path = "aoc-2021" }
aoc-2022 = { path = "aoc-2022" }
aoc-2023 = { path = "aoc-2023" }
aoc-2024 = { path = "aoc-2024" }

aoc-common = { path = "aoc-common" }
aoc-meta   = { path = "aoc-meta" }
aoc-test   = { path = "aoc-test" }

bitvec            = "1.0.1"
clap              = { version = "4.5.51", features = ["derive"] }
clap-stdin        = "0.8.0"
dashmap           = "7.0.0-rc2"
deranged          = "0.5.5"
either            = "1.15.0"
enum-iterator     = "2.3.0"
enum-map          = "2.7.3"
eyre              = "0.6.12"
fnv               = "1.0.7"
itertools         = "0.14.0"
itoa              = "1.0"
md-5              = "0.11.0-rc.2"
memchr            = "2.7.6"
nohash-hasher     = "0.2.0"
pastey            = "0.1.1"
pathsep           = "0.1.1"
petgraph          = { version = "0.8.3", features = ["rayon"] }
pretty_assertions = "1.4.1"
rayon             = "1.11.0"
regex             = "1.12.2"
reqwest           = { version = "0.12.24", features = ["cookies"] }
serde_json        = "1.0.145"
thiserror         = "2.0.17"
tinystr           = { version = "0.8.2", features = ["std"] }
tinyvec           = { version = "1.10.0", features = ["latest_stable_rust"] }
void              = "1.0.2"
wide              = "0.8.2"
winnow            = { version = "0.7.13", features = ["simd"] }
