[package]
name = "aoc-2015"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc-meta.workspace = true
aoc-common.workspace = true

paste.workspace = true
eyre.workspace = true
rayon.workspace = true
wide.workspace = true
nohash-hasher.workspace = true
itertools.workspace = true
md-5.workspace = true
itoa.workspace = true
winnow.workspace = true
tinystr.workspace = true
fnv.workspace = true
petgraph.workspace = true
serde_json.workspace = true
either.workspace = true
enum-map.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
aoc-test.workspace = true
