[package]
name = "aoc-2015"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aoc-meta.workspace = true
aoc-common.workspace = true

paste.workspace = true
eyre.workspace = true
rayon.workspace = true
wide.workspace = true
nohash-hasher.workspace = true
itertools.workspace = true
md-5.workspace = true
itoa.workspace = true
winnow.workspace = true
tinystr.workspace = true
fnv.workspace = true
petgraph.workspace = true
serde_json.workspace = true
either.workspace = true
enum-map.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
aoc-test.workspace = true
