[package]
edition.workspace = true
license.workspace = true
name              = "aoc-2015"
version.workspace = true

[dependencies]
aoc-common.workspace = true
aoc-meta.workspace   = true

either.workspace        = true
enum-map.workspace      = true
eyre.workspace          = true
fnv.workspace           = true
itertools.workspace     = true
itoa.workspace          = true
md-5.workspace          = true
nohash-hasher.workspace = true
pastey.workspace        = true
petgraph.workspace      = true
rayon.workspace         = true
serde_json.workspace    = true
tinystr.workspace       = true
wide.workspace          = true
winnow.workspace        = true

[dev-dependencies]
aoc-test.workspace          = true
pretty_assertions.workspace = true
