[package]
name = "aoc-2016"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc-meta.workspace = true
aoc-common.workspace = true

eyre.workspace = true
winnow.workspace = true
itertools.workspace = true
rayon.workspace = true
nohash-hasher.workspace = true
md-5.workspace = true
memchr.workspace = true
itoa.workspace = true
fnv.workspace = true
pathsep.workspace = true
regex.workspace = true

[dev-dependencies]
aoc-test.workspace = true
pretty_assertions.workspace = true
