[package]
name = "aoc-2016"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aoc-meta.workspace = true
aoc-common.workspace = true

eyre.workspace = true
winnow.workspace = true
itertools.workspace = true
rayon.workspace = true
nohash-hasher.workspace = true
md-5.workspace = true
memchr.workspace = true
itoa.workspace = true
fnv.workspace = true
pathsep.workspace = true
regex.workspace = true

[dev-dependencies]
aoc-test.workspace = true
pretty_assertions.workspace = true
