[package]
edition.workspace = true
license.workspace = true
name              = "aoc-2016"
version.workspace = true

[dependencies]
aoc-common.workspace = true
aoc-meta.workspace   = true

bitvec.workspace        = true
deranged.workspace      = true
either.workspace        = true
eyre.workspace          = true
fnv.workspace           = true
itertools.workspace     = true
itoa.workspace          = true
md-5.workspace          = true
memchr.workspace        = true
nohash-hasher.workspace = true
pathsep.workspace       = true
rayon.workspace         = true
regex.workspace         = true
tinyvec.workspace       = true
void.workspace          = true
winnow.workspace        = true

[dev-dependencies]
aoc-test.workspace          = true
pretty_assertions.workspace = true
