[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc-meta.workspace = true
aoc-common.workspace = true

eyre.workspace = true
rayon.workspace = true
nohash-hasher.workspace = true
itertools.workspace = true
regex.workspace = true
void.workspace = true

[dev-dependencies]
aoc-test.workspace = true
pretty_assertions.workspace = true
