[package]
name = "aoc-2024"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aoc-meta.workspace = true
aoc-common.workspace = true

eyre.workspace = true
rayon.workspace = true
nohash-hasher.workspace = true
itertools.workspace = true
regex.workspace = true
void.workspace = true

[dev-dependencies]
aoc-test.workspace = true
pretty_assertions.workspace = true
