[package]
edition.workspace = true
license.workspace = true
name              = "aoc-2025"
version.workspace = true

[dependencies]
aoc-meta.workspace  = true
deranged.workspace  = true
eyre.workspace      = true
itertools.workspace = true
itoa.workspace      = true
rayon.workspace     = true

[dev-dependencies]
aoc-test.workspace          = true
pretty_assertions.workspace = true
