[package]
name = "aoc"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aoc-meta.workspace = true
aoc-2015.workspace = true
aoc-2016.workspace = true
aoc-2017.workspace = true
aoc-2018.workspace = true
aoc-2019.workspace = true
aoc-2020.workspace = true
aoc-2021.workspace = true
aoc-2022.workspace = true
aoc-2023.workspace = true
aoc-2024.workspace = true

clap.workspace = true
clap-stdin.workspace = true
eyre.workspace = true
