[package]
edition.workspace = true
license.workspace = true
name              = "aoc"
version.workspace = true

[[bench]]
harness = false
name    = "aoc"

[dependencies]
aoc-2015.workspace = true
aoc-2016.workspace = true
aoc-2017.workspace = true
aoc-2018.workspace = true
aoc-2019.workspace = true
aoc-2020.workspace = true
aoc-2021.workspace = true
aoc-2022.workspace = true
aoc-2023.workspace = true
aoc-2024.workspace = true
aoc-2025.workspace = true
aoc-meta.workspace = true

clap.workspace       = true
clap-stdin.workspace = true
eyre.workspace       = true

[dev-dependencies]
divan.workspace  = true
pastey.workspace = true
